--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "multer": "^2.1.0",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.18.2",
+    "nodemailer": "^8.0.1",
     "sequelize": "^6.37.7"
   }
 }
