--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.18.2",
     "nodemailer": "^8.0.1",
+    "resend": "^6.9.3",
     "sequelize": "^6.37.7"
   }
 }
